# ooais

./: .gitignore  pyproject.toml
lab02/data/raw/: metadata.json  orbital_observations.csv
lab02/reports/: lab_02_report.txt
lab03/data/processed/: observations_invalid.csv  observations_valid.csv
lab03/data/raw/: metadata.json
lab03/reports/: ingestion_summary.txt  report_lab03.txt
lab03/src/ingestion/: ingest_data.py
lab04/data/processed/: model_input.csv
lab04/reports/: report_lab04.txt
lab04/src/ingestion/: ingest_data.py
lab04/src/preprocessing/: prepare_ml_input.py
lab05/data/processed/: model_labels.csv  observations_valid.csv  (+1 more)
lab05/reports/: model_training_summary.txt
lab05/results/: decision_tree_model.joblib  model_evaluation.txt
lab06/reports/: model_playground_summary.txt
lab07/models/: image_model.joblib
lab08/models/: cnn_model.pt
lab08/reports/: cnn_vs_ml.txt  report_lab07.txt  report_lab08.txt
lab09/models/: cnn_model.pt  resnet18_finetuned_classes.txt
lab09/reports/: final_engineering_decision.txt  fine_tuning_report.txt  model_comparison_lab9.txt  report_lab09.txt  transfer_learning_report.txt  transfer_learning_report_old.txt  unknown_input_transfer_analysis.txt
lab10/reports/: cam_methods_comparison.txt  class_attention_consistency.txt  custom_xai_experiment.txt  gradcam_analysis.txt  occlusion_analysis.txt  report_lab10.txt  transformation_analysis.txt
lab11/models/: small_unet_modified.pt  small_unet_original.pt
lab11/reports/: segmentation_analysis.txt  segmentation_report.txt  segmentation_report_modified.txt
(+41 files in other folders)
